# yt-comment-idea-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: collect.yml  tests.yml
src/yt_idea_collector/: __init__.py  auth.py  cli.py  config.py  duplicates.py  gemini.py  models.py  oauth_setup.py  pipeline.py  policy.py  retry.py  scoring.py  sheets.py  topics.py  youtube.py
tests/: test_auth.py  test_cli.py  test_config.py  test_duplicates.py  test_gemini.py  test_pipeline.py  test_scoring.py  test_sheets.py  test_topics.py  test_youtube.py
